Fix color type name, and add getprofile to API
